--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A tool to play and fade between animations.",
   "unity": "2021.1",
   "dependencies": {
-    "com.unity.playablegraph-visualizer": "0.2.1-preview.3"
+    "com.unity.playablegraph-visualizer": "0.2.1"
   },
   "keywords": [
     "clip",
