--- a/AssemblyDefinitions/Editor/ClipFader.Editor.asmdef
+++ b/AssemblyDefinitions/Editor/ClipFader.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:67f779a33e2e46542aa8ed7fadf7ad02",
         "GUID:d8e7b33ba1e4a89fc8a64b6b1e97a6ac",
-        "GUID:2702b94ed25b25fdda2226e5c974e9e8"
+        "GUID:2702b94ed25b25fdda2226e5c974e9e8",
+        "GUID:f06555f75b070af458a003d92f9efb00"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
