--- a/AssemblyDefinitions/Editor/ClipFader.Editor.asmdef
+++ b/AssemblyDefinitions/Editor/ClipFader.Editor.asmdef
@@ -7,7 +7,9 @@
         "GUID:2702b94ed25b25fdda2226e5c974e9e8",
         "GUID:f06555f75b070af458a003d92f9efb00"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
